tests/baselines/reference/tsxCorrectlyParseLessThanComparison1.errors.txt
tsxCorrectlyParseLessThanComparison1.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== tsxCorrectlyParseLessThanComparison1.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface Element {
            div: string;
        }
    }
    declare namespace React {
        class Component<P, S> {
            constructor(props?: P, context?: any);
            props: P;
        }
    }
    
    export class ShortDetails extends React.Component<{ id: number }, {}> {
        public render(): JSX.Element {
            if (this.props.id < 1) {
                return (<div></div>);
            }
        }
    }